--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+	<!DOCTYPE html>
 <html>
 <head>
   <title>Stukbook</title>
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+<%= render "layouts/header" %>
 <%= yield %>
 
 </body>
